funciona hasta de forma manual hasta la X

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -26,4 +26,6 @@
     <string name="blocks">Texto en Bloques</string>
     <string name="textoEncriptado">Texto Encriptado</string>
     <string name="descifrar">Descifrar</string>
+    <string name="decrypt">Desencriptacion</string>
+    <string name="textoDesencriptado">Texto Decifrado</string>
 </resources>
